# Shabashka

./: Dockerfile  README.md  categories.json  db.sqlite3  docker-compose.yaml  host.env  manage.py  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
main/: admin.py  apps.py  forms.py  middlewares.py  models.py  pipeline.py  sitemaps.py  urls.py  utilities.py  views.py
main/migrations/: 0001_initial.py  0002_alter_category_name.py  0002_auto_20201006_1240.py  0003_additionlalimage_offer.py  0004_auto_20201016_1418.py  0005_auto_20201030_1241.py  0006_comment_price.py  0007_auto_20201102_0855.py  0008_auto_20201102_1503.py  0009_offer_rewievs.py  0010_offer_shared.py  0011_auto_20201105_0932.py  0012_offer_status.py  0013_auto_20201105_1413.py  0014_auto_20201106_1052.py  0015_auto_20201106_1053.py  0016_auto_20201124_1514.py  0017_auto_20201125_1331.py  0018_auto_20201125_1340.py  0019_auto_20201127_1314.py  0020_auto_20201130_1112.py  0021_auto_20201201_0825.py  0022_auto_20201202_0700.py  0023_auto_20201202_0816.py  0024_shauser_favorite.py  0025_auto_20210520_1226.py  0025_location.py  0026_auto_20210218_1113.py  0026_auto_20210525_1026.py  0027_auto_20210514_0800.py  0027_auto_20210531_0710.py  0028_auto_20210726_1405.py  0029_auto_20210818_1014.py  0030_auto_20210818_1055.py  0031_alter_additionalimage_options_alter_category_options_and_more.py
main/templates/email/: activation_letter_body.txt  activation_letter_subject.txt  (+8 more)
main/templatetags/: custom_tags.py
main/tests/: test_views.py
shabashka/: asgi.py  settings.py  urls.py  wsgi.py
(+39 files in other folders)
