[project]
name = "shabashka"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.8.1",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "crispy-bootstrap4==2024.10",
    "cryptography==45.0.2",
    "defusedxml==0.7.1",
    "diff-match-patch==20241021",
    "django==5.2.6",
    "django-appconf==1.1.0",
    "django-bootstrap4==25.1",
    "django-cleanup==9.0.0",
    "django-cookie-consent==0.6.0",
    "django-cors-headers==4.7.0",
    "django-crispy-forms==2.4",
    "django-debug-toolbar==5.2.0",
    "django-extra-views==0.16.0",
    "django-import-export==4.3.7",
    "django-map-widgets==0.5.1",
    "djangorestframework==3.16.0",
    "easy-thumbnails==2.10",
    "exceptiongroup==1.3.0",
    "h11==0.16.0",
    "idna==3.10",
    "oauthlib==3.2.2",
    "outcome==1.3.0.post0",
    "pillow==11.2.1",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pyjwt==2.10.1",
    "pysocks==1.7.1",
    "python-dotenv==1.1.0",
    "python3-openid==3.2.0",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "selenium==4.33.0",
    "sniffio==1.3.1",
    "social-auth-app-django==5.4.3",
    "social-auth-core==4.6.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "sqlparse==0.5.3",
    "tablib==3.8.0",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
]
